# ml-template

./: CLAUDE.md  Makefile  main.py  pyproject.toml
.claude-code/: settings.json
src/cmd/: main.py
src/notebook/: main.ipynb  main.py
